--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@ document.getElementById('CoolResponseButtons').style.display="none";
 
 function iquit()
 {	
-	
+	*/
 	document.getElementById('CoolResponseButtons').style.display="none";
 	document.getElementById('responseButtonWrapper').style.display="none";
 	document.getElementById('CoolButtons').style.display="none";
@@ -723,8 +723,8 @@ function iquit()
 	finaldiv.appendChild(br);
 	finaldiv.appendChild(mistakescount);
 	document.body.appendChild(finaldiv);
-	
-	
+	/*
+	displayEndScreen();
 	
 	
 }
