--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@ document.getElementById('CoolResponseButtons').style.display="none";
 				document.body.innerHTML=" ";
 				let finaldiv=document.createElement("div");
 				finaldiv.setAttribute("id","finaldiv");
-				let finalcontent=document.createTextNode("A-ti raspuns corect la toate seriile.");
+				let finalcontent=document.createTextNode("Ati raspuns corect la toate seriile.");
 				let congrats=document.createTextNode("Felicitari!");
 				let br=document.createElement("br");
 				let br2=document.createElement("br");
@@ -709,22 +709,22 @@ document.getElementById('CoolResponseButtons').style.display="none";
 
 function iquit()
 {	
-	/*
+	
 	document.getElementById('CoolResponseButtons').style.display="none";
 	document.getElementById('responseButtonWrapper').style.display="none";
 	document.getElementById('CoolButtons').style.display="none";
 	document.body.innerHTML=" ";
 	let finaldiv=document.createElement("div");
 	finaldiv.setAttribute("id","finaldiv");
-	let finalcontent=document.createTextNode("A-ti raspuns corect la "+correctAnswers+" serii.");
+	let finalcontent=document.createTextNode("Ati raspuns corect la "+correctAnswers+" serii.");
 	let br=document.createElement("br");
 	let mistakescount=document.createTextNode("Greseli:"+mistakes);
 	finaldiv.appendChild(finalcontent);
 	finaldiv.appendChild(br);
 	finaldiv.appendChild(mistakescount);
 	document.body.appendChild(finaldiv);
-	*/
-	displayEndScreen();
+	
+	//displayEndScreen();
 	
 	
 }
