--- a/index.html
+++ b/index.html
@@ -715,8 +715,9 @@ document.getElementById('CoolResponseButtons').style.display="none";
 				console.log("End time is:"+endTime);
 				timeSpent = new Date(endTime).getTime()-new Date(startTime).getTime();
 				let time=document.createElement("div");
-				var minutes=timeSpent/60000;
-				let time_spent=document.createTextNode("Timp:"+minutes+" minute");
+				var minutes=Math.floor(timeSpent/60000);
+       				 var seconds=(timeSpent/1000)%60;
+				let time_spent=document.createTextNode("Timp:"+minutes+" minute si "+seconds.toFixed(2)+" secunde.");
 				time.appendChild(time_spent);
 				finaldiv.appendChild(time);
 				
