--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-<!-- random series / display stats / few additions to login page -->
+<!-- / display stats / few additions to login page -->
 <title>Mnemo</title>
   <meta charset="UTF-8">
   <meta name="description" content="Mnemo">
@@ -197,7 +197,10 @@
 	<input type="radio" id="dynamic_Series" name="series_Type" value="Serie dinamica">
 	<label for="dynamic_Series">Serie dinamica</label>
 	<br>
-	<button type="button" class="loginbutton" id="log_button" onclick="LogMeIn()">Doresc sa accesez jocul</button>
+	<button type="button" class="loginbutton" id="log_button" onclick="LogMeIn()">Doresc sa accesez jocul</button><br>
+	<div id="leaderboard_link_wrapper">
+		<a href="leaderboards.html" id="leaderboard_link">Clasament</a>
+	</div>
 	<!-- add radio buttons to choose other settings -->
 
 </div> <!--   -->
