--- a/index.html
+++ b/index.html
@@ -198,9 +198,9 @@
 	<label for="dynamic_Series">Serie dinamica</label>
 	<br>
 	<button type="button" class="loginbutton" id="log_button" onclick="LogMeIn()">Doresc sa accesez jocul</button><br>
-	<div id="leaderboard_link_wrapper">
-		<a href="leaderboards.html" id="leaderboard_link">Clasament</a>
-	</div>
+	
+	<!-- <div id="leaderboard_link_wrapper"><a href="leaderboards.html" id="leaderboard_link">Clasament</a></div> -->
+
 	<!-- add radio buttons to choose other settings -->
 
 </div> <!--   -->
